Dark mode! (still some override issues I'm working out)

--- a/style.less
+++ b/style.less
@@ -31,9 +31,15 @@
 // Sidebar
 @side-bg: rgba(0, 0, 0, 0.88);
 @side-border: rgb(49, 48, 43);
+@side-header-bg: rgba(200, 200, 200, 0.2);
 
 @side-user-text: "Summoners";
 @side-online-text: "on the Rift";
+
+// Sections
+@side-color: rgb(202, 181, 162);
+@side-secondary-color: rgb(136, 136, 136);
+@side-header-font-size: 18px;
 
 // Submit buttons
 @submit-bg: rgb(85, 54, 33);
@@ -44,3 +50,6 @@
 // News
 @news-num: 4;
 @news-height: 65px;
+@news-opacity: 0.75;
+@news-fade: rgba(0, 0, 0, 0.5);
+@news-font: "TradeCn","Arial Narrow",Arial,Helvetica,sans-serif;
